--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,10 @@
-.App {
+/* .App {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 /* css for store */
-.info-box {
+/* .info-box {
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   padding: 20px;
@@ -23,11 +23,11 @@
   font-size: 16px;
   color: #666;
   margin: 10px 0;
-}
+} */
 
 /* sample css for sales */
 
-.sales-container {
+/* .sales-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,51 +43,44 @@
 
   margin-top: 10px;
   margin-bottom: auto;
-}
+} */
 
-.sales-sidebar {
-  width: 200px;
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  margin-top: 20px;
-  margin-bottom: auto;
-}
+/* 
 
 .sales-sidebar button {
   display: block;
-  color: #b91414;
   text-decoration: none;
   margin-bottom: 10px;
-  
-}
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #000000;
+  background-color: #D9D9D9;
+  display: block;  
+} */
 /* 
 navbar sample css */
 
-.navbar {
-  background-color: rgb(118, 118, 122); 
-  overflow: hidden;
+/* .navbar {
+  background-color: #D9D9D9;
+  height: 20%;
+  width: 100%;
+  padding: 4rem;
   display: flex;
-  list-style-type: none;
-  margin: auto;
-  padding: 1rem;
-  width: 90%;
   border-radius: 10px;
-  align-content: center;
+  justify-content: center;
+  
 }
 
-/* Navbar links */
-.navbar li {
-  float: none;
-  display: block; 
-  color: #000000; 
-  text-align: center; 
-  padding: 1rem;
+.navbar button {
+  margin-bottom: 10px;
+  padding: 30px 30px 30px 30px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #000000;
+  display: block;
   text-align: center;
-  display: flex;
-  margin: 0 auto;
-  font-size: large;
-  font: bold;
+  background-color: #D9D9D9
 }
 
 
@@ -102,4 +95,114 @@ navbar sample css */
 }
 .navbar a:visited {
   color: #000000;
+} */ 
+*{
+  box-sizing: border-box;
 }
+
+body {
+  font-family: Arial;
+  padding: 10px;
+  background: #f1f1f1;
+  background-image: url('https://i.ibb.co/yPDHS7h/vecteezy-abstract-dark-pink-gradient-geometric-background-modern-4256686.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  text-align: center;
+  background: white;
+}
+
+.header h1 {
+  font-size: 50px;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+  float: left;
+  width: 70%; 
+  margin-left: 20px; /* Add margin to the right side to create space */
+}
+
+.rightcolumn {
+  margin-top: 20px;
+  float: left;
+  width: 25%;
+  background-color: #f1f1f1;
+  padding-left: 20px;
+  margin-left: 20px;
+}
+
+/* Fake image */
+.contentbox {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+  margin-right: 20px;
+  
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+  margin-right: 20px
+}
+
+/* Clear floats after the columns */
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+.sales-sidebar {
+  width: 200px;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: auto;
+  height: 100%;
+  width: 300px;
+  background-color: rgb(0, 128, 255);
+  right: 0;
+  padding-top: 100px;
+}
+
