--- a/client/src/new.css
+++ b/client/src/new.css
@@ -1,29 +1,47 @@
-.body {
+body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(25, 27, 30);
+  margin: 0;
 }
+
+/* -------------------------------------------------------------- */
+/* Nav Bar */
 
 .topnav {
-  background-color: hsl(0, 0%, 0%, 70%);
+  background-color: rgb(57, 62, 69);
   overflow: hidden;
-  border-bottom: 1px solid hsl(0, 0%, 95%, 50%);
   margin: 0;
-  padding: 0;
+  padding: 4px;
   position: relative;
+  border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
 }
 
-.topnav img {
+/* logo in top left nav bar */
+.logo-div {
   width: 30px;
   float: left;
   display: inline;
-  padding: 9px;
-  padding-right: 0;
-  filter: invert(180);
+  margin: 9px;
+  margin-right: 0;
+  filter: invert(100%);
+  position: relative;
 }
 
+.logo-div img {
+  width: 100%;
+  display: block;
+}
+
+.logo-div:hover img {
+  filter: invert(20%);
+  cursor: pointer;
+}
+
+/* website title */
 .topnav p {
   color: #f2f2f2;
   text-align: center;
-  font-size: 17px;
+  font-size: 21px;
   text-decoration: none;
   width: 160px;
   display: inline;
@@ -32,10 +50,9 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
-
-  /* vertical-align: middle; */
 }
 
+/* navlinks and <a> tags */
 .left-nav {
   float: left;
 }
@@ -59,3 +76,31 @@
 .topnav a.active {
   color: rgb(197, 197, 197);
 }
+
+/* -------------------------------------------------------------- */
+/* Overview Tab */
+
+/* Columns Setup */
+.overview-columns-container{
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.column-wing {
+  flex: 15%;
+}
+
+.column-center {
+  flex: 70%;
+}
+
+/* filters */
+
+/* summary */
+.profit-summary-container h1, button{
+  display: inline;
+}
+
+/* saved-summaries */
