--- a/client/src/new.css
+++ b/client/src/new.css
@@ -3,124 +3,17 @@ body {
   background-color: rgb(241, 240, 240);
   margin: 0;
   color: black;
+  overflow: auto;
 }
 
-/* -------------------------------------------------------------- */
-/* Nav Bar */
-
-.topnav {
-  background-color: rgb(194, 195, 197);
-  overflow: hidden;
-  margin: 0;
-  padding: 4px;
-  position: relative;
-  border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
-}
-
-/* logo in top left nav bar */
-.logo-div {
-  width: 30px;
-  float: left;
-  display: inline;
-  margin: 9px;
-  /* margin-right: 0; */
-  /* filter: invert(100%); */
-  position: relative;
-}
-
-.logo-div img {
-  width: 100%;
-  display: block;
-}
-
-.logo-div:hover img {
-  filter: invert(20%);
-  cursor: pointer;
-}
-
-/* website title */
-.topnav p {
-  /* color: #f2f2f2; */
-  color: black;
-  text-align: center;
-  font-size: 21px;
-  text-decoration: none;
-  width: 160px;
-  display: inline;
-  position: absolute;
-  margin: 0;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-}
-
-/* navlinks and <a> tags */
-.left-nav {
-  float: left;
-}
-
-.right-nav {
-  float: right;
-}
-
-.topnav a {
-  /* color: #f2f2f2; */
-  color: black;
-  padding: 14px 20px;
-  text-decoration: none;
-  font-size: 17px;
-  display: inline;
-}
-
-.topnav a:hover {
-  /* color: rgb(88, 88, 88); */
-  background-color: rgba(219, 219, 227, 0.468);
-  border-radius: 15px;
-}
-
-.topnav a.active {
-  color: rgb(197, 197, 197);
-}
-
-/* -------------------------------------------------------------- */
-/* Overview Tab */
-
-/* Columns Setup */
-.overview-columns-container{
-  position: fixed;
-  display: flex;
-  width: 100%;
-  height: 100vh;
-}
-
-.column-wing {
-  flex: 15%;
-}
-
-.column-center {
-  flex: 70%;
-}
-
-/* filters */
-
-/* summary */
-.save-summary-button{
-  position: absolute;
-  right: 5vw;
-  top: 6%;
-  background: linear-gradient(to bottom right, #113F8C, #01A4A4);
-  color: rgb(255, 255, 255);
-  border: none;
-  border-radius: 4px;
-  padding: 9px 16px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 20px;
-  cursor: pointer;
-}
+/* colors */
 
 .blue {
-  background: linear-gradient(to bottom right, #113F8C, #01A4A4);
+  background: linear-gradient(to bottom right,#01A4A4, #113F8C);
+}
+
+.blue-midpoint {
+  background: #097298bb;
 }
 
 .green {
@@ -136,27 +29,147 @@ body {
   padding: 4.5px;
   margin-top: 30px;
   border-radius: 15px;
-  width: fit-content;
+  width: 100%;
   margin-bottom: 30px;
+}
+
+/* -------------------------------------------------------------- */
+/* Nav Bar */
+.topnav {
+  min-width: 600px;
+  overflow: hidden;
+  margin: 0;
+  padding: 4px;
+  position: relative;
+  border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
+}
+
+/* logo in top left nav bar */
+.logo-div {
+  width: 30px;
+  float: left;
+  display: inline;
+  margin: 9px;
+  position: relative;
+}
+
+.logo-div img {
+  width: 100%;
+  display: block;
+}
+
+/* .logo-div:hover img {
+  filter: invert(20%);
+  cursor: pointer;
+} */
+
+/* website title */
+.topnav p {
+  color: black;
+  text-align: center;
+  font-size: 21px;
+  font-weight: bold;
+  text-decoration: none;
+  width: 170px;
+  display: inline;
+  margin: 0;
+  padding: 12px;
+  padding-left: 0;
+}
+
+/* navlinks and <a> tags */
+.left-nav {
+  float: left;
+}
+
+.middle-nav {
+  position: absolute;
+  margin: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.right-nav {
+  float: right;
+}
+
+.topnav a {
+  /* color: #f2f2f2; */
+  color: black;
+  padding: 14px 20px;
+  text-decoration: none;
+  font-size: 17px;
+  display: inline;
+  font-weight: bold;
+}
+
+.topnav a:hover, .topnav a.active {
+  background-color: rgba(219, 219, 227, 0.468);
+  border-radius: 15px;
+}
+
+/* -------------------------------------------------------------- */
+/* Overview Tab */
+
+/* Columns Setup */
+.overview-columns-container{
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.column-wing {
+  flex-grow: 2;
+}
+
+.column-center {
+  flex-grow: 1;
+}
+
+/* filters */
+
+/* summary */
+.save-summary-button{
+  position: absolute;
+  right: 5vw;
+  top: 6%;
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 4px;
+  padding: 9px 16px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 .profit-summary-container, .profitability-charts-container{
   position: relative;
   background-color: rgb(235, 237, 242);
-  width: 60vw;
-  padding: 20px 30px;
-  margin: auto;
+  padding: 4.5px;
+  width: auto;
+  /* margin: auto; */
   min-width: 600px;
   border-radius: 15px;
 }
 
 .profit-summary-container h1, .profitability-charts-container h1{
   margin-top: 0;
-  margin-left: 5vw;
+  margin-left: 2vw;
+  padding-top: 20px;
 }
 
 .profit-summary-container table{
   margin: auto;
+}
+
+.profit-summary-table-container {
+  padding-bottom: 20px;
 }
 
 table{
@@ -177,6 +190,27 @@ tr.total{
   border-top: 3px solid;
 }
 
+/* most profitable section (2 columns of tables) */
+.most-profitable-columns-container{
+  border: solid rgb(18, 78, 124) 1px;
+  /* position: fixed; */
+  display: flex;
+  width: 100%;
+  /* height: 100vh; */
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 
+.mp-table-container {
+  border: solid red 1px;
+  flex-grow: 1;
+  margin: 5px;
+}
+
+.mp-table table, .mp-table th, .mp-table td {
+  border: solid 1px;
+  padding: 4px;
+}
 
 /* saved-summaries */
